Fixed adam-hint overflow #96

--- a/src/app/eav-material-controls/adam/adam-hint/adam-hint.component.scss
+++ b/src/app/eav-material-controls/adam/adam-hint/adam-hint.component.scss
@@ -10,10 +10,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .apple-icon {
     font-size: 14px;
     width: 14px;
     height: 14px;
+    line-height: 14px;
 }
